--- a/bfd/ChangeLog
+++ b/bfd/ChangeLog
@@ -1,3 +1,10 @@
+2013-07-20  Alan Modra  <amodra@gmail.com>
+
+	PR ld/15762
+	PR ld/12761
+	* elflink.c (elf_link_add_object_symbols): Don't clobber
+	.gnu.warning.symbol sections when shared.
+
 2013-04-26  Will Newton  <will.newton@linaro.org>
 
 	* elf64-aarch64.c (elf64_aarch64_check_relocs): Remove dead code.
